--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="img">
-    <div class="ALE">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
       <img src="aleksi virgo copy.jpg" class="d-block w-100" alt="...">
     </div>
-    <div class="ALE">
+    <div class="carousel-item">
       <img src="aleksio down.jpg" class="d-block w-100" alt="...">
     </div>
-    <div class="ALE">
+    <div class="carousel-item">
       <img src="yo.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
