--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="shortcut icon" href="img/parada-de-autobus.png" type="image/x-icon">
 </head>
 <body>
-  <nav>
-    <ul id="listanav">
-      <li><a href="CUALQUIRCHOCA.HTML" class="myButton">modelos</a></li>
-
-    </ul>
-  </nav>
+  
 
     <div class="texto center-text">
         <h1>🔥TIENDA DE ZAPATILLAS🔥</h1> 
         <p>👟Aca podes encontrar zapatillas de diferentes marcas al mejor precio👟</p> 
         <p>💸Venta en USD💸</p>
+        <div class="center-text">
+          <nav>
+            <ul id="listanav">
+              <li><a href="CUALQUIRCHOCA.HTML" class="myButton">modelos</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
         <div class="img">
           <div class="beni">
@@ -26,6 +28,8 @@
           </div>
         </div>
 
-   
+        <div class="center-text">
+          <a href="https://www.instagram.com/">instagram</a>
+        </div>
 </body> 
 </html>
