--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="texto center-text">
         <h1>🔥TIENDA DE ZAPATILLAS🔥</h1> 
         <p>👟Aca podes encontrar zapatillas de diferentes marcas al mejor precio👟</p> 
-        <p>💸Venta en USD💸</p>
+        <p>   💸Venta en USD💸</p>
         <div class="center-text">
-          <nav>
-            <ul id="listanav">
-              <li><a href="CUALQUIRCHOCA.HTML" class="myButton">modelos</a></li>
-            </ul>
-          </nav>
+     <nav>
+       <ul id="listanav">
+           <li><a href="CUALQUIRCHOCA.HTML" class="myButton">modelos</a></li>
+         </ul>
+     </nav>
         </div>
       </div>
         <div class="img">
@@ -29,7 +29,7 @@
         </div>
 
         <div class="center-text">
-          <a href="https://www.instagram.com/">instagram</a>
+          <a href="https://www.instagram.com/"class="myButton">instagram</a>
         </div>
 </body> 
 </html>
