--- a/index.html
+++ b/index.html
@@ -6,20 +6,42 @@
     <title>ZAPATILLAS🔥</title>
     <link rel="stylesheet" href="stile.css">
     <link rel="shortcut icon" href="img/parada-de-autobus.png" type="image/x-icon">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="logo.jpg" alt="Logo" class="logo-navbar">
+      Zapatillas
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="CUALQUIRCHOCA.HTML">Modelos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="aaaa.html">especificasiones</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <div class="texto center-text">
         <h1>🔥TIENDA DE ZAPATILLAS🔥</h1> 
         <p>👟Aca podes encontrar zapatillas de diferentes marcas al mejor precio👟</p> 
         <p>   💸Venta en USD💸</p>
         <div class="center-text">
-     <nav>
-       <ul id="listanav">
-           <li><a href="CUALQUIRCHOCA.HTML" class="myButton">modelos</a></li>
-         </ul>
-     </nav>
+     
         </div>
       </div>
         <div class="img">
@@ -28,8 +50,8 @@
           </div>
         </div>
 
-        <div class="center-text">
-          <a href="https://www.instagram.com/"class="myButton">instagram</a>
-        </div>
-</body> 
+        
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
