--- a/CUALQUIRCHOCA.HTML
+++ b/CUALQUIRCHOCA.HTML
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #ffffff;">
-  <!-- Barra de navegación Bootstrap igual a index.html -->
+ 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -27,7 +27,7 @@
             <a class="nav-link active" aria-current="page" href="CUALQUIRCHOCA.HTML">Modelos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aaaa.html">especificasiones</a>
+            <a class="nav-link" href="aaaa.html">especificaciones</a>
           </li>
         </ul>
       </div>
@@ -71,5 +71,10 @@
   </button>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+<footer class="bg-dark text-white text-center py-3 mt-5">
+  <div>
+    © Tienda de Aleksio y Benicio trabajo escuela Proa
+  </div>
+</footer>
 </body>
 </html>
