--- a/aaaa.html
+++ b/aaaa.html
@@ -62,7 +62,7 @@
             <a class="nav-link" href="CUALQUIRCHOCA.HTML">Modelos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aaaa.html">especificasiones</a>
+            <a class="nav-link" href="aaaa.html">especificaciones</a>
           </li>
         </ul>
       </div>
@@ -87,5 +87,10 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <div>
+      © Tienda de Aleksio y Benicio trabajo escuela Proa
+    </div>
+  </footer>
 </body>
 </html>
