--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="CUALQUIRCHOCA.HTML">Modelos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aaaa.html">especificasiones</a>
+          <a class="nav-link" href="aaaa.html">especificaciones</a>
         </li>
       </ul>
     </div>
@@ -53,5 +53,10 @@
         
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="bg-dark text-white text-center py-3 mt-5 fixed-bottom">
+    <div>
+      © Tienda de Aleksio y Benicio trabajo escuela Proa
+    </div>
+  </footer>
 </body>
 </html>
