--- a/CUALQUIRCHOCA.HTML
+++ b/CUALQUIRCHOCA.HTML
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZAPATILLAS🔥</title>
   <link rel="stylesheet" href="MARACACAAC.CSS">
+  <link rel="shortcut icon" href="img/zapatillas.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
-<body style="background-color: #ffffff;">
+<body style="background-color: #635c5c;">
  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-
+        <img src="zapatillas.GGG.png" alt="Logo" class="logo-navbar" style="height:40px;width:auto;margin-right:12px;">
         Zapatillas
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +56,7 @@
        
     </div>
     <div class="carousel-item text-center">
-       <h2>Osiri D3</h2>
+       <h2>Osiri d3</h2>
         <p>100$</p>
         <img src="yo.jpg" class="d-block w-45 mx-auto" alt="...">
        
@@ -73,7 +75,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 <footer class="bg-dark text-white text-center py-3 mt-5">
   <div>
-    © Tienda de Aleksio y Benicio trabajo escuela Proa
+    🐱‍👤Tienda de Aleksio y Benicio trabajo escuela Proa
   </div>
 </footer>
 </body>
