--- a/aaaa.html
+++ b/aaaa.html
@@ -5,49 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stile.css">
+    <link rel="shortcut icon" href="img/zapatillas.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-      .galeria {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        justify-content: center;
-        margin-top: 30px;
-      }
-      .galeria-item {
-        width: 220px;
-        background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        padding: 16px;
-        text-align: center;
-      }
-      .galeria-item img {
-        width: 900%;
-        max-width: 180px;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 10px;
-      }
-      .galeria-item h2 {
-        font-size: 1.1rem;
-        margin: 0;
-        color: #333;
-      }
-      .logo-navbar {
-        width: 40px;
-        height: auto;
-        margin-right: 10px;
-        vertical-align: middle;
-      }
-    </style>
+
+
 </head>
-<body>
+<body style="background-color: #635c5c;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="logo.jpg" alt="Logo" class="logo-navbar">
+        <img src="zapatillas.GGG.png" alt="Logo" class="logo-navbar">
         Zapatillas
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,16 +38,16 @@
   </nav>
   <div class="texto" style="text-align:center;">
     <h1>ZAPATILLAS🔥</h1>
-    <p>informacion acerca de las zapatillas </p>
+    <p>Informacion acerca de las zapatillas </p>
   </div>
   <div class="galeria">
     <div class="galeria-item">
       <img src="aleksi virgo copy.jpg" alt="Paseo de los arroyos" />
-      <h2>Estas son las zapatillas puma lafrance unicamente en color azul perfectas para salir de joda </h2>
+      <h2>Estas son las zapatillas Puma Lafrancé unicamente en color azul perfectas para salir de joda </h2>
     </div>
     <div class="galeria-item">
       <img src="aleksio down.jpg" alt="Predio cervecero oktoberfest" />
-      <h2>Estan son las zapatillas louis Vuitton unicamente en color azul con blanco perfectas para tirar aura  </h2>
+      <h2>Estan son las zapatillas Louis Vuitton unicamente en color azul con blanco perfectas para tirar aura  </h2>
     </div>
     <div class="galeria-item">
       <img src="yo.jpg" alt="Plaza central" />
@@ -89,7 +57,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
   <footer class="bg-dark text-white text-center py-3 mt-5">
     <div>
-      © Tienda de Aleksio y Benicio trabajo escuela Proa
+      🐱‍👤Tienda de Aleksio y Benicio trabajo escuela Proa
     </div>
   </footer>
 </body>
