--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZAPATILLAS🔥</title>
     <link rel="stylesheet" href="stile.css">
-    <link rel="shortcut icon" href="img/parada-de-autobus.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/zapatillas.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #635c5c;">
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="logo.jpg" alt="Logo" class="logo-navbar">
+      <img src="zapatillas.GGG.png" alt="Logo" class="logo-navbar">
       Zapatillas
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,9 +41,17 @@
         <p>👟Aca podes encontrar zapatillas de diferentes marcas al mejor precio👟</p> 
         <p>   💸Venta en USD💸</p>
         <div class="center-text">
-     
         </div>
       </div>
+      <aside class="bg-light p-3 m-3 rounded shadow" style="max-width:350px;margin:auto;">
+  <h2 class="h5">¿Por qué elegirnos?</h2>
+  <ul>
+    <li>Envíos a todo el país</li>
+    <li>Descuentos exclusivos</li>
+    <li>Atención personalizada</li>
+    <li>Variedad de marcas y modelos</li>
+  </ul>
+</aside>
         <div class="img">
           <div class="beni">
             <img src="marcas.jpg" alt="VGB">
@@ -53,9 +61,9 @@
         
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-  <footer class="bg-dark text-white text-center py-3 mt-5 fixed-bottom">
+   <footer class="bg-dark text-white text-center py-3 mt-5 fixed-bottom">
     <div>
-      © Tienda de Aleksio y Benicio trabajo escuela Proa
+       🐱‍👤Tienda de Aleksio y Benicio trabajo escuela Proa
     </div>
   </footer>
 </body>
