--- a/CUALQUIRCHOCA.HTML
+++ b/CUALQUIRCHOCA.HTML
@@ -8,8 +8,18 @@
   <link rel="shortcut icon" href="img/zapatillas.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="" type="image/x-icon">
+  <style>
+  body {
+    min-height: 500vh;
+    display: flex;
+    flex-direction: column;
+  }
+  footer {
+    margin-top: auto;
+  }
+</style>
 </head>
-<body style="background-color: #635c5c;">
+<body style="background-color: #7e7676;">
  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
