--- a/aaaa.html
+++ b/aaaa.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body style="background-color: #635c5c;">
+<body style="background-color: #7e7676;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
