--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>ZAPATILLAS🔥</title>
     <link rel="stylesheet" href="stile.css">
     <link rel="shortcut icon" href="img/zapatillas.png" type="image/x-icon">
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body style="background-color: #635c5c;">
+<body style="background-color: #7e7676;">
   
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container-fluid">
+  <div class="container-fluid"> m
     <a class="navbar-brand" href="#">
       <img src="zapatillas.GGG.png" alt="Logo" class="logo-navbar">
       Zapatillas
