--- a/CUALQUIRCHOCA.HTML
+++ b/CUALQUIRCHOCA.HTML
@@ -19,7 +19,7 @@
   }
 </style>
 </head>
-<body style="background-color: #7e7676;">
+<body style="background-color: #8b8686;">
  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
@@ -83,7 +83,7 @@
   </button>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-<footer class="bg-dark text-white text-center py-3 mt-5">
+<footer class="bg-dark text-white text-center py-3 fixed-bottom">
   <div>
     🐱‍👤Tienda de Aleksio y Benicio trabajo escuela Proa
   </div>
