--- a/aaaa.html
+++ b/aaaa.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body style="background-color: #7e7676;">
+<body style="background-color: #8b8686;">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
@@ -54,8 +54,13 @@
       <h2>Estan son las zapatillas Osiri d3 unicamente en color full negro perfectas para salir casual</h2>
     </div>
   </div>
+  <div class="d-flex justify-content-center gap-3 my-4">
+    <a href="https://www.instagram.com/" class="myButton">Instagram</a>
+    <a href="https://web.whatsapp.com/" class="myButton">Whatsapp</a>
+    <a href="https://www.facebook.com/?locale=es_LA" class="myButton">Facebook</a>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
     <div>
       🐱‍👤Tienda de Aleksio y Benicio trabajo escuela Proa
     </div>
